# oca-management-system

./: .copier-answers.yml  README.md  test-requirements.txt
document_page_environment_manual/: README.rst
document_page_environmental_aspect/: README.rst
document_page_environmental_aspect/views/: document_page.xml
document_page_health_safety_manual/: README.rst
document_page_work_instruction/: README.rst
document_page_work_instruction/views/: document_page_work_instructions.xml
mgmtsystem_action/i18n/: it.po
mgmtsystem_action_efficacy/: README.rst
mgmtsystem_action_efficacy/readme/: CONTRIBUTORS.md
mgmtsystem_action_template/: README.rst
mgmtsystem_action_template/readme/: CONTRIBUTORS.md
mgmtsystem_action_template/views/: mgmtsystem_action_template.xml
mgmtsystem_hazard/: README.rst
mgmtsystem_hazard/i18n/: it.po
mgmtsystem_hazard/views/: mgmtsystem_hazard.xml  mgmtsystem_hazard_control_measure.xml  mgmtsystem_hazard_origin.xml  mgmtsystem_hazard_probability.xml  mgmtsystem_hazard_severity.xml  mgmtsystem_hazard_test.xml  mgmtsystem_hazard_type.xml  mgmtsystem_hazard_usage.xml
mgmtsystem_hazard_risk/: README.rst
mgmtsystem_hazard_risk/views/: mgmtsystem_hazard_residual_risk.xml  mgmtsystem_hazard_risk_computation.xml  mgmtsystem_hazard_risk_type.xml
mgmtsystem_info_security_manual/: README.rst
mgmtsystem_nonconformity/i18n/: am.po  ca.po  de.po  el_GR.po  es.po  es_CO.po  es_ES.po  fa.po  fi.po  fr.po  gl.po  hr_HR.po  hu.po  it.po  lv.po  mgmtsystem_nonconformity.pot  nb.po  nl.po  nl_NL.po  (+9 more)
mgmtsystem_nonconformity_hazard/: README.rst
mgmtsystem_nonconformity_hr/: README.rst
mgmtsystem_nonconformity_maintenance_equipment/: README.rst
mgmtsystem_nonconformity_mrp/: README.rst
mgmtsystem_nonconformity_product/: README.rst
mgmtsystem_nonconformity_repair/: README.rst
mgmtsystem_nonconformity_type/: README.rst
mgmtsystem_partner/: README.rst
setup/_metapackage/: pyproject.toml
(+21 files in other folders)
