[project]
name = "odoo-addons-oca-management-system"
version = "18.0.20250120.8"
dependencies = [
    "odoo-addon-document_page_environmental_aspect==18.0.*",
    "odoo-addon-document_page_procedure==18.0.*",
    "odoo-addon-document_page_quality_manual==18.0.*",
    "odoo-addon-document_page_work_instruction==18.0.*",
    "odoo-addon-mgmtsystem==18.0.*",
    "odoo-addon-mgmtsystem_action==18.0.*",
    "odoo-addon-mgmtsystem_hazard==18.0.*",
    "odoo-addon-mgmtsystem_info_security_manual==18.0.*",
    "odoo-addon-mgmtsystem_manual==18.0.*",
    "odoo-addon-mgmtsystem_nonconformity==18.0.*",
    "odoo-addon-mgmtsystem_nonconformity_hr==18.0.*",
    "odoo-addon-mgmtsystem_nonconformity_maintenance_equipment==18.0.*",
    "odoo-addon-mgmtsystem_nonconformity_mrp==18.0.*",
    "odoo-addon-mgmtsystem_nonconformity_product==18.0.*",
    "odoo-addon-mgmtsystem_nonconformity_repair==18.0.*",
    "odoo-addon-mgmtsystem_partner==18.0.*",
    "odoo-addon-mgmtsystem_review==18.0.*",
    "odoo-addon-mgmtsystem_survey==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
